--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
         <div class="container">
-            <h1>Станешь моей парой на день Валентина?</h1>
+            <h1>Станешь моей парой на день Валентина?!</h1>
             <div class="buttons">
                 <button class="yes-button">Да</button>
                 <button class="no-button">Нет</button>
